# pii-exercise

./: .gitignore  PII in LLMs.docx  PII_Detection_Presidio_Architecture.docx  README.md  cdk.json  patent-screening-methodology.pptx  pyproject.toml
.devcontainer/: devcontainer.json
pii_redaction/src/: README.md  main.py
pii_redaction/src/detection/: README.md  comprehend_detector.py  detection_utils.py  pii_detector.py  pii_entity.py  pii_patterns.py  regex_detector.py
pii_redaction/src/processing/: batch_orchestrator.py  file_processor.py  job_result.py  payload_processor.py
pii_redaction/src/redaction/: README.md  payload_processor.py  redaction_result.py  redaction_strategies.py  redaction_validator.py  text_redactor.py
pii_redaction/tests/: test_detection.py
pii_redaction/tests/data/input/: TestUseCase_TestFile.json
